--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "ares/node_modules/.bin/react-scripts start",
+    "build": "ares/node_modules/.bin/react-scripts build",
+    "test": "ares/node_modules/.bin/react-scripts test",
+    "eject": "ares/node_modules/.bin/react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
