--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ares",
+  "name": "arres",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -11,6 +11,10 @@
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
   },
+  "engines": {
+    "node": "16.x"
+  },
+
   "scripts": {
     "start": "ares/node_modules/.bin/react-scripts start",
     "build": "ares/node_modules/.bin/react-scripts build",
