--- a/package.json
+++ b/package.json
@@ -8,13 +8,12 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^5.0.0",
     "web-vitals": "^2.1.4"
   },
   "engines": {
     "node": "16.x"
   },
-
   "scripts": {
     "start": "ares/node_modules/.bin/react-scripts start",
     "build": "ares/node_modules/.bin/react-scripts build",
