--- a/package.json
+++ b/package.json
@@ -15,10 +15,8 @@
     "node": "16.x"
   },
   "scripts": {
-    "start": "ares/node_modules/.bin/react-scripts start",
-    "build": "ares/node_modules/.bin/react-scripts build",
-    "test": "ares/node_modules/.bin/react-scripts test",
-    "eject": "ares/node_modules/.bin/react-scripts eject"
+    "start": "node_modules/.bin/react-scripts start",
+    "eject": "node_modules/.bin/react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
